--- a/package.json
+++ b/package.json
@@ -1,33 +1,56 @@
 {
-  "name": "frontend-challenge",
-  "version": "1.0.0",
-  "description": "Take-home frontend coding challenge for FL105",
-  "main": "src/index.tsx",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "keywords": [
-    "frontend",
-    "challenge",
-    "react",
-    "typescript",
-    "chat"
-  ],
-  "author": "FL105 Inc.",
-  "license": "MIT",
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^4.7.0",
-    "sass-embedded": "^1.92.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+	"name": "frontend-challenge",
+	"version": "1.0.0",
+	"description": "Take-home frontend coding challenge for FL105",
+	"main": "src/index.tsx",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "vitest --config vitest.config.ts",
+		"test:ui": "vitest --ui --config vitest.config.ts",
+		"test:run": "vitest run --config vitest.config.ts",
+		"coverage": "vitest --coverage --config vitest.config.ts",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"docker:dev": "docker-compose --profile dev up --build",
+		"docker:prod": "docker-compose --profile prod up --build",
+		"docker:storybook": "docker-compose --profile dev up storybook-dev --build",
+		"docker:build": "docker-compose --profile build up --build",
+		"docker:down": "docker-compose down --volumes"
+	},
+	"keywords": [
+		"frontend",
+		"challenge",
+		"react",
+		"typescript",
+		"chat"
+	],
+	"author": "FL105 Inc.",
+	"license": "MIT",
+	"dependencies": {
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0"
+	},
+	"devDependencies": {
+		"@chromatic-com/storybook": "^4.1.1",
+		"@storybook/addon-a11y": "^9.1.6",
+		"@storybook/addon-docs": "^9.1.6",
+		"@storybook/react-vite": "^9.1.6",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/react": "^19.1.12",
+		"@types/react-dom": "^19.1.9",
+		"@vitejs/plugin-react": "^4.7.0",
+		"@vitest/coverage-v8": "^3.2.4",
+		"jsdom": "^27.0.0",
+		"sass-embedded": "^1.92.1",
+		"storybook": "^9.1.6",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.0",
+		"vitest": "^3.2.4"
+	},
+	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
